--- a/prepare_train_data.ipynb
+++ b/prepare_train_data.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "24433fb4-e7d6-4650-bae2-8b18bac27c81",
    "metadata": {},
    "outputs": [
@@ -118,6 +118,7 @@
     "N_FINE_CODEBOOKS = 8\n",
     "COARSE_RATE_HZ = 75\n",
     "\n",
+    "# 格式为： wav_path|text\n",
     "path='/mnt/cephfs/hjh/train_record/tts/bark_with_voice_clone/test_data'\n",
     "train_path=f'{path}/wavpaths.txt'\n",
     "\n",
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "61f71937-e877-4e0e-b188-63c45e600920",
    "metadata": {},
    "outputs": [
@@ -168,7 +169,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "save to: /mnt/cephfs/hjh/train_record/tts/bark_with_voice_clone/test_data/train_valid.txt\n",
       "done!\n"
      ]
     }
