--- a/prepare_train_data.ipynb
+++ b/prepare_train_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f0c80514-7b15-4f1f-9ee5-bc71d75a1745",
    "metadata": {},
    "outputs": [],
@@ -25,23 +25,19 @@
     "from accelerate.utils import set_seed\n",
     "from transformers import BertTokenizer\n",
     "from huggingface_hub import hf_hub_download\n",
-    "from packaging import version"
+    "from packaging import version\n",
+    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
+    "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a24ac071-cf54-460d-9b58-6c40b2710570",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_duration_sec = 15.12 # the maximum allowed duration in seconds\n",
     "hubert_tokenizer_path = 'data/models/hubert/tokenizer.pth'\n",
@@ -80,18 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "24433fb4-e7d6-4650-bae2-8b18bac27c81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CONTEXT_WINDOW_SIZE = 1024\n",
     "\n",
@@ -119,8 +107,10 @@
     "COARSE_RATE_HZ = 75\n",
     "\n",
     "# 格式为： wav_path|text\n",
-    "path='/mnt/cephfs/hjh/train_record/tts/bark_with_voice_clone/test_data'\n",
-    "train_path=f'{path}/wavpaths.txt'\n",
+    "# path='/mnt/cephfs/hjh/train_record/tts/bark_with_voice_clone/test_data'\n",
+    "# train_path=f'{path}/wavpaths.txt'\n",
+    "path='/mnt/cephfs/hjh/train_record/tts/bark_with_voice_clone/train_data'\n",
+    "train_path=f'{path}/train.txt'\n",
     "\n",
     "def load_filepaths_and_text(filename, split=\"|\"):\n",
     "    with open(filename, encoding='utf-8', errors='ignore') as f:\n",
@@ -132,7 +122,11 @@
     "    \n",
     "valid_lines_train = []\n",
     "# convert wavs to semantic tokens\n",
-    "for wav_path, txt in load_filepaths_and_text(train_path):\n",
+    "\n",
+    "for wav_path, txt in tqdm(load_filepaths_and_text(train_path)):\n",
+    "    save_path=os.path.join(path, 'tokens', os.path.basename(wav_path).replace('.wav', '.npz'))\n",
+    "    if os.path.exists(save_path):\n",
+    "        continue\n",
     "    wav, sr = torchaudio.load(wav_path)\n",
     "    if not get_duration(wav, sr) > max_duration_sec:\n",
     "        valid_lines_train.append((wav_path, txt))\n",
@@ -144,7 +138,7 @@
     "    # save semantic tokens\n",
     "    os.makedirs(os.path.join(path, 'tokens'), exist_ok=True)\n",
     "    semantic_tokens = semantic_tokens.cpu().numpy()\n",
-    "\n",
+    "    \n",
     "    # Extract discrete codes from EnCodec\n",
     "    with torch.no_grad():\n",
     "        encoded_frames = codec_model.encode(wav.unsqueeze(0))\n",
@@ -154,31 +148,27 @@
     "    codes = codes.cpu().numpy()\n",
     "\n",
     "    # save tokens\n",
-    "    np.savez_compressed(os.path.join(path, 'tokens', os.path.basename(wav_path).replace('.wav', '.npz')), fine=codes, coarse=codes[:2, :], semantic=semantic_tokens)\n",
+    "    np.savez_compressed(save_path, fine=codes, coarse=codes[:2, :], semantic=semantic_tokens)\n",
+    "\n",
     "\n",
     "print('done!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "61f71937-e877-4e0e-b188-63c45e600920",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "valid_lines_valid = []\n",
     "\n",
     "valid_path=f'{path}/valid.txt'\n",
     "\n",
-    "for wav_path, txt in load_filepaths_and_text(valid_path):\n",
+    "for wav_path, txt in tqdm(load_filepaths_and_text(valid_path)):\n",
+    "    save_path=os.path.join(path, 'tokens', os.path.basename(wav_path).replace('.wav', '.npz'))\n",
+    "    if os.path.exists(save_path):\n",
+    "        continue\n",
     "    wav, sr = torchaudio.load(wav_path)\n",
     "    if not get_duration(wav, sr) > max_duration_sec:\n",
     "        valid_lines_valid.append((wav_path, txt))\n",
@@ -200,7 +190,7 @@
     "    codes = codes.cpu().numpy()\n",
     "\n",
     "    # save tokens\n",
-    "    np.savez_compressed(os.path.join(path, 'tokens', os.path.basename(wav_path).replace('.wav', '.npz')), fine=codes, coarse=codes[:2, :], semantic=semantic_tokens)\n",
+    "    np.savez_compressed(save_path, fine=codes, coarse=codes[:2, :], semantic=semantic_tokens)\n",
     "\n",
     "\n",
     "print('done!')"
@@ -208,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a0a6b1dd-13f1-4a55-b600-04355f5d997e",
    "metadata": {},
    "outputs": [],
